--- a/themes/openy_themes/openy_rose/scss/modules/_alerts.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_alerts.scss
@@ -45,7 +45,10 @@ $module: 'site-alert';
     position: absolute;
     right: 20px;
     top: 10px;
-    @include text-shadow(0 0 2px $dark-grey);
+    @include text-shadow(-1px 0 #999, 0 1px #999, 1px 0 #999, 0 -1px #999);
+    &:hover {
+      color: #999999;
+    }
   }
 
   &--header,
@@ -129,12 +132,10 @@ $module: 'site-alert';
   }
 
   .slick__arrow {
-    display: none;
-    @include breakpoint($screen-desktop) {
-      display: block;
-      position: relative;
-      margin-top: -25px;
-    }
+    display: block;
+    height: 0;
+    margin-top: -20px;
+    position: relative;
   }
 
   .slick__counter {
@@ -142,63 +143,48 @@ $module: 'site-alert';
   }
 
   /* Arrows */
-  .slick-prev,
-  .slick-next {
-    position: absolute;
-    display: block;
-    height: 20px;
-    width: 20px;
-    line-height: 0px;
-    font-size: 0px;
-    cursor: pointer;
+  .slick-arrow {
     background: transparent;
+    border: none;
     color: transparent;
-    top: 50%;
+    cursor: pointer;
+    display: block;
+    font-size: 0;
+    height: 20px;
+    left: auto;
+    line-height: 0;
+    outline: none;
+    padding: 0;
+    position: absolute;
+    width: 20px;
     -webkit-transform: translate(0, -50%);
     -ms-transform: translate(0, -50%);
     transform: translate(0, -50%);
-    padding: 0;
-    border: none;
-    outline: none;
-
+    @include text-shadow(-1px 0 #999, 0 1px #999, 1px 0 #999, 0 -1px #999);
     &:hover, &:focus {
-      outline: none;
-      background: transparent;
-      color: transparent;
       &:before {
-        opacity: 1;
+        color: #999999;
+        @include text-shadow(-1px 0 #fff, 0 1px #fff, 1px 0 #fff, 0 -1px #fff);
       }
     }
-
-    &.slick-disabled:before {
-      opacity: 0.25;
-    }
-
     &:before {
-      font-family: "FontAwesome";
-      font-size: 20px;
-      line-height: 1;
       color: $white;
-      opacity: 0.5;
+      font-family: "FontAwesome";
+      font-size: 30px;
+      font-weight: bold;
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
     }
   }
 
-  .slick-arrow {
-    @include text-shadow(0 0 2px $black);
-  }
-
   .slick-prev {
-    left: auto;
-    right: 25px;
+    right: 35px;
     &:before {
       content: "\f104";
     }
   }
 
   .slick-next {
-    left: auto;
     right: 0;
     &:before {
       content: "\f105";
