--- a/structs/atc.scss
+++ b/structs/atc.scss
@@ -10,9 +10,9 @@
 }
 
 .addtocalendar {
-  float: right;
-  margin-right: 20px;
-  position: relative;
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
   display: inline-block;
   background: transparent!important;
 }
