--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -55,11 +55,11 @@
             {{ page.logo }}
           </div>
 
-          <a class="navbar-toggle visible-xs visible-sm" data-toggle="collapse" data-target=".sidebar-left" href="#">
+          <button class="navbar-toggle visible-xs visible-sm" data-toggle="collapse" data-target=".sidebar-left">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </a>
+          </button>
         </div>
       </div>
     </nav>
