[YLI-219]: Location title color.

--- a/openy_lily/css/style.css
+++ b/openy_lily/css/style.css
@@ -900,6 +900,9 @@ body.locations-camps-template .locations-page-under-lead-copy {
 .locations-list .field-location-phone {
   display: inline;
 }
+.locations-list h1 {
+  color: #636466 !important;
+}
 
 .node-preview-container {
   background-color: #fff;
