--- a/openy_lily/sass/misc/_blog.scss
+++ b/openy_lily/sass/misc/_blog.scss
@@ -135,3 +135,17 @@
     }
   }
 }
+
+.blog-more-teaser {
+  .form-item-combine {
+    @include breakpoint ($desktop-small $desktop) {
+      padding: 0 0 0 140px !important;
+    }
+    @include breakpoint ($desktop-small) {
+      input {
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+      }
+    }
+  }
+}
