--- a/openy_lily/sass/misc/_footer.scss
+++ b/openy_lily/sass/misc/_footer.scss
@@ -35,6 +35,18 @@
             }
           }
         }
+        @include breakpoint(0 $tablet) {
+          li {
+            margin: 0 5px;
+            a {
+              width: 36px;
+              height: 36px;
+              line-height: 30px;
+              font-size: 20px;
+              padding-top: 30px;
+            }
+          }
+        }
       }
     }
   }
