--- a/openy_lily/sass/misc/_footer.scss
+++ b/openy_lily/sass/misc/_footer.scss
@@ -11,7 +11,6 @@
   #block-openy-lily-footersocialblock {
     .field-block-content {
       ul {
-        margin-bottom: 40px;
         li {
           margin: 0 12px;
           a {
@@ -58,7 +57,12 @@
     }
   }
   #block-openy-lily-footercopyrightblock {
+    padding-top: 40px;
+    padding-bottom: 10px;
     text-align: center;
+    .contextual {
+      top: -20px;
+    }
     p {
       font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
       display: inline-block;
