--- a/openy_lily/css/style.css
+++ b/openy_lily/css/style.css
@@ -2689,151 +2689,152 @@ article.site-alert ul li div {
   margin: 20px 0;
 }
 
-[data-drupal-selector="edit-membership-application"] .form-item {
+.membership-application-form .form-item {
   padding: 0 10px;
 }
-[data-drupal-selector="edit-membership-application"] .form-item-first,
-[data-drupal-selector="edit-membership-application"] .form-item-last {
+.membership-application-form .form-item-first,
+.membership-application-form .form-item-last {
   float: left;
   width: 45%;
 }
 @media (min-width: 0) and (max-width: 48em) {
-  [data-drupal-selector="edit-membership-application"] .form-item-first,
-  [data-drupal-selector="edit-membership-application"] .form-item-last {
+  .membership-application-form .form-item-first,
+  .membership-application-form .form-item-last {
     float: none;
     width: 100%;
   }
 }
-[data-drupal-selector="edit-membership-application"] .form-item-middle {
+.membership-application-form .form-item-middle {
   float: left;
   width: 10%;
 }
 @media (min-width: 0) and (max-width: 48em) {
-  [data-drupal-selector="edit-membership-application"] .form-item-middle {
+  .membership-application-form .form-item-middle {
     float: none;
     width: 100%;
   }
 }
-[data-drupal-selector="edit-membership-application"] .form-item-emergency-contact,
-[data-drupal-selector="edit-membership-application"] .form-item-member-id,
-[data-drupal-selector="edit-membership-application"] .form-item-city,
-[data-drupal-selector="edit-membership-application"] .form-item-parent-name,
-[data-drupal-selector="edit-membership-application"] .form-item-primary-phone {
+.membership-application-form .form-item-emergency-contact,
+.membership-application-form .form-item-member-id,
+.membership-application-form .form-item-city,
+.membership-application-form .form-item-parent-name,
+.membership-application-form .form-item-primary-phone {
   float: left;
   width: 34%;
 }
 @media (min-width: 0) and (max-width: 48em) {
-  [data-drupal-selector="edit-membership-application"] .form-item-emergency-contact,
-  [data-drupal-selector="edit-membership-application"] .form-item-member-id,
-  [data-drupal-selector="edit-membership-application"] .form-item-city,
-  [data-drupal-selector="edit-membership-application"] .form-item-parent-name,
-  [data-drupal-selector="edit-membership-application"] .form-item-primary-phone {
+  .membership-application-form .form-item-emergency-contact,
+  .membership-application-form .form-item-member-id,
+  .membership-application-form .form-item-city,
+  .membership-application-form .form-item-parent-name,
+  .membership-application-form .form-item-primary-phone {
     float: none;
     width: 100%;
   }
 }
-[data-drupal-selector="edit-membership-application"] .form-item-relationship-2,
-[data-drupal-selector="edit-membership-application"] .form-item-relationship-1,
-[data-drupal-selector="edit-membership-application"] .form-item-phone-2,
-[data-drupal-selector="edit-membership-application"] .form-item-phone-1,
-[data-drupal-selector="edit-membership-application"] .form-item-bus-phone,
-[data-drupal-selector="edit-membership-application"] .form-item-join-date,
-[data-drupal-selector="edit-membership-application"] .form-item-expiration-date,
-[data-drupal-selector="edit-membership-application"] .form-item-cell,
-[data-drupal-selector="edit-membership-application"] .form-item-state,
-[data-drupal-selector="edit-membership-application"] .form-item-zip-code {
+.membership-application-form .form-item-relationship-2,
+.membership-application-form .form-item-relationship-1,
+.membership-application-form .form-item-phone-2,
+.membership-application-form .form-item-phone-1,
+.membership-application-form .form-item-bus-phone,
+.membership-application-form .form-item-join-date,
+.membership-application-form .form-item-expiration-date,
+.membership-application-form .form-item-cell,
+.membership-application-form .form-item-state,
+.membership-application-form .form-item-zip-code {
   float: left;
   width: 33%;
 }
 @media (min-width: 0) and (max-width: 48em) {
-  [data-drupal-selector="edit-membership-application"] .form-item-relationship-2,
-  [data-drupal-selector="edit-membership-application"] .form-item-relationship-1,
-  [data-drupal-selector="edit-membership-application"] .form-item-phone-2,
-  [data-drupal-selector="edit-membership-application"] .form-item-phone-1,
-  [data-drupal-selector="edit-membership-application"] .form-item-bus-phone,
-  [data-drupal-selector="edit-membership-application"] .form-item-join-date,
-  [data-drupal-selector="edit-membership-application"] .form-item-expiration-date,
-  [data-drupal-selector="edit-membership-application"] .form-item-cell,
-  [data-drupal-selector="edit-membership-application"] .form-item-state,
-  [data-drupal-selector="edit-membership-application"] .form-item-zip-code {
+  .membership-application-form .form-item-relationship-2,
+  .membership-application-form .form-item-relationship-1,
+  .membership-application-form .form-item-phone-2,
+  .membership-application-form .form-item-phone-1,
+  .membership-application-form .form-item-bus-phone,
+  .membership-application-form .form-item-join-date,
+  .membership-application-form .form-item-expiration-date,
+  .membership-application-form .form-item-cell,
+  .membership-application-form .form-item-state,
+  .membership-application-form .form-item-zip-code {
     float: none;
     width: 100%;
   }
 }
-[data-drupal-selector="edit-membership-application"] .form-item-member-initials-1,
-[data-drupal-selector="edit-membership-application"] .form-item-member-initials-2,
-[data-drupal-selector="edit-membership-application"] .form-item-member-initials-3,
-[data-drupal-selector="edit-membership-application"] .form-item-member-initials-4,
-[data-drupal-selector="edit-membership-application"] .form-item-member-initials-6,
-[data-drupal-selector="edit-membership-application"] .form-item-member-initials-5 {
+.membership-application-form .form-item-member-initials-1,
+.membership-application-form .form-item-member-initials-2,
+.membership-application-form .form-item-member-initials-3,
+.membership-application-form .form-item-member-initials-4,
+.membership-application-form .form-item-member-initials-6,
+.membership-application-form .form-item-member-initials-5 {
   width: 150px;
 }
-[data-drupal-selector="edit-membership-application"] [data-drupal-selector="edit-gender"],
-[data-drupal-selector="edit-membership-application"] .form-item-program-policy-signature,
-[data-drupal-selector="edit-membership-application"] .form-item-signature-of-bank-depositor-credit-card-holder,
-[data-drupal-selector="edit-membership-application"] .form-item-member-signature,
-[data-drupal-selector="edit-membership-application"] .form-item-bottom-date,
-[data-drupal-selector="edit-membership-application"] .form-item-member-print-name,
-[data-drupal-selector="edit-membership-application"] .form-item-bank-draft-signature-date,
-[data-drupal-selector="edit-membership-application"] .form-item-program-policy-date,
-[data-drupal-selector="edit-membership-application"] .form-item-electronic-signature,
-[data-drupal-selector="edit-membership-application"] .form-item-dob {
+.membership-application-form .form-item-email-address + fieldset,
+.membership-application-form .form-item-program-policy-signature,
+.membership-application-form .form-item-signature-of-bank-depositor-credit-card-holder,
+.membership-application-form .form-item-member-signature,
+.membership-application-form .form-item-bottom-date,
+.membership-application-form .form-item-member-print-name,
+.membership-application-form .form-item-bank-draft-signature-date,
+.membership-application-form .form-item-program-policy-date,
+.membership-application-form .form-item-electronic-signature,
+.membership-application-form .form-item-dob {
   width: 50%;
   float: left;
 }
 @media (min-width: 0) and (max-width: 48em) {
-  [data-drupal-selector="edit-membership-application"] [data-drupal-selector="edit-gender"],
-  [data-drupal-selector="edit-membership-application"] .form-item-program-policy-signature,
-  [data-drupal-selector="edit-membership-application"] .form-item-signature-of-bank-depositor-credit-card-holder,
-  [data-drupal-selector="edit-membership-application"] .form-item-member-signature,
-  [data-drupal-selector="edit-membership-application"] .form-item-bottom-date,
-  [data-drupal-selector="edit-membership-application"] .form-item-member-print-name,
-  [data-drupal-selector="edit-membership-application"] .form-item-bank-draft-signature-date,
-  [data-drupal-selector="edit-membership-application"] .form-item-program-policy-date,
-  [data-drupal-selector="edit-membership-application"] .form-item-electronic-signature,
-  [data-drupal-selector="edit-membership-application"] .form-item-dob {
+  .membership-application-form .form-item-email-address + fieldset,
+  .membership-application-form .form-item-program-policy-signature,
+  .membership-application-form .form-item-signature-of-bank-depositor-credit-card-holder,
+  .membership-application-form .form-item-member-signature,
+  .membership-application-form .form-item-bottom-date,
+  .membership-application-form .form-item-member-print-name,
+  .membership-application-form .form-item-bank-draft-signature-date,
+  .membership-application-form .form-item-program-policy-date,
+  .membership-application-form .form-item-electronic-signature,
+  .membership-application-form .form-item-dob {
     float: none;
     width: 100%;
   }
 }
-[data-drupal-selector="edit-membership-application"] .form-item-member-print-name,
-[data-drupal-selector="edit-membership-application"] .form-item-electronic-signature {
+.membership-application-form .form-item-member-print-name,
+.membership-application-form .form-item-electronic-signature {
   float: none;
 }
-[data-drupal-selector="edit-membership-application"] .form-item-dob {
+.membership-application-form .form-item-dob {
   margin-top: 50px;
 }
-[data-drupal-selector="edit-membership-application"] [data-drupal-selector="edit-questionnaire"] {
+.membership-application-form .form-item-dob + fieldset {
   width: 100%;
 }
-[data-drupal-selector="edit-membership-application"] [data-drupal-selector="edit-how-did-you-hear-about"],
-[data-drupal-selector="edit-membership-application"] [data-drupal-selector="edit-race-ethnicity"],
-[data-drupal-selector="edit-membership-application"] [data-drupal-selector="edit-household-income-range"] {
+.membership-application-form fieldset.js-webform-radios-fieldset {
   padding: 0;
 }
-[data-drupal-selector="edit-membership-application"] #edit-how-did-you-hear-about .form-item,
-[data-drupal-selector="edit-membership-application"] #edit-household-income-range .form-item,
-[data-drupal-selector="edit-membership-application"] #edit-race-ethnicity .form-item {
+.membership-application-form .form-item-expiration-date + fieldset {
+  padding: 0 10px;
+}
+.membership-application-form #edit-how-did-you-hear-about .form-item,
+.membership-application-form #edit-household-income-range .form-item,
+.membership-application-form #edit-race-ethnicity .form-item {
   width: 30%;
   float: left;
 }
 @media (min-width: 0) and (max-width: 48em) {
-  [data-drupal-selector="edit-membership-application"] #edit-how-did-you-hear-about .form-item,
-  [data-drupal-selector="edit-membership-application"] #edit-household-income-range .form-item,
-  [data-drupal-selector="edit-membership-application"] #edit-race-ethnicity .form-item {
+  .membership-application-form #edit-how-did-you-hear-about .form-item,
+  .membership-application-form #edit-household-income-range .form-item,
+  .membership-application-form #edit-race-ethnicity .form-item {
     float: none;
     width: 100%;
   }
 }
-[data-drupal-selector="edit-membership-application"] .js-webform-radios .js-form-item label {
+.membership-application-form .js-webform-radios .js-form-item label {
   margin-top: 0 !important;
 }
-[data-drupal-selector="edit-membership-application"] [data-drupal-selector="edit-privacy-policy-link"] {
+.membership-application-form [data-drupal-selector="edit-privacy-policy-link"] {
   display: block;
   font-weight: bold;
   margin: 25px 10px 10px;
 }
-[data-drupal-selector="edit-membership-application"] .js-form-item-confirm-checkbox label {
+.membership-application-form .js-form-item-confirm-checkbox label {
   max-width: 90%;
   vertical-align: top;
 }
