--- a/docroot/themes/custom/ymca/sass/global/_ymca-styles.scss
+++ b/docroot/themes/custom/ymca/sass/global/_ymca-styles.scss
@@ -1206,3 +1206,29 @@ span.grey-caret {
     }
   }
 }
+
+body.ancestor-camps {
+  .node--type-article,
+  .lead,
+  .call-to-action {
+    a:hover {
+      color: #01a490;
+    }
+  }
+  .navbar-default #block-top-menu-2 .navbar-nav > li:first-child > a {
+    background-color: #01a490;
+    &:hover {
+      background-color: #01a490;
+      border-color: #01a490;
+    }
+  }
+  .post-excerpt .read-more {
+    color: #01a490;
+  }
+  .footer-themes-b .social-icon {
+    border-color: #01a490;
+    &:hover {
+      color: #01a490;
+    }
+  }
+}
