--- a/openy_lily/sass/misc/_blog.scss
+++ b/openy_lily/sass/misc/_blog.scss
@@ -18,6 +18,7 @@
             background-color: $main-purple;
             color: white;
             font-weight: bold;
+            z-index: 1;
           }
           .field-media-image {
             height: 210px;
