--- a/themes/openy_themes/openy_rose/css/styles.css
+++ b/themes/openy_themes/openy_rose/css/styles.css
@@ -7044,9 +7044,7 @@ textarea:focus,
 .form-control:focus,
 .slick-arrow:focus:before,
 .navbar-toggle:focus {
-  border-color: #69ff00;
-  box-shadow: 0 0 0 5px #69ff00;
-  outline: none !important;
+  outline: 5px auto #69ff00;
 }
 
 .focusable.skip-link:focus {
